--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-composer.lock
-vendor
-config.php
-data
-cache
-dev/front/node_modules
+/composer.lock
+/vendor
+/config.php
+/data
+/cache
+/dev/front/node_modules
